--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,18 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "numpy>=2.2.2",
-    "scikit-learn>=1.6.1",
-    "scipy>=1.15.1",
-    "torch>=2.6.0",
+  "numpy>=2.2.2",
+  "scikit-learn>=1.6.1",
+  "scipy>=1.15.1",
+  "torch>=2.6.0",
 ]
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+# pythonPath = ".venv/bin/python"
+
+[tool.ruff]
+line-length = 120
+indent-width = 4
+
