--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+  "ipython>=8.32.0",
   "numpy>=2.2.2",
   "scikit-learn>=1.6.1",
   "scipy>=1.15.1",
   "torch>=2.6.0",
+  "tqdm>=4.67.1",
 ]
 
 [tool.pyright]
