--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "ipython>=8.32.0",
+  "loguru>=0.7.3",
   "numpy>=2.2.2",
   "scikit-learn>=1.6.1",
   "scipy>=1.15.1",
